User Registration Working + Tested Queries

--- a/MpsgStarter/res/layout/activity_mpsg_starter.xml
+++ b/MpsgStarter/res/layout/activity_mpsg_starter.xml
@@ -63,6 +63,23 @@
         android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:text="Caretaker" />
+    
+   
+   <Button
+        android:id="@+id/query"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:layout_alignParentRight="true"
+        android:text="@string/Query" />
+   
+   <EditText 
+        android:id="@+id/queryInput"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:layout_toLeftOf="@+id/query"
+        android:hint="@string/edit_message" />
 
     <TextView
         android:id="@+id/personalText"
