--- a/MpsgStarter/res/layout/connected_screen.xml
+++ b/MpsgStarter/res/layout/connected_screen.xml
@@ -31,9 +31,9 @@
     	android:id="@+id/bluetoothText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="17dp"
+        android:layout_below="@+id/leaveSend"
+        android:layout_marginTop="20dp"
         android:text=""
         android:textSize="20sp"
         tools:ignore="HardcodedText" />
